added header component

--- a/src/app/patients-view/patients-view.component.css
+++ b/src/app/patients-view/patients-view.component.css
@@ -17,3 +17,7 @@
     background-color: #e0e0e0; /* Lighter gray background for header row */
   }
   
+.mat-elevation-z8{
+  width: 80%;
+  margin: 0 auto;
+}
