--- a/src/app/patients-view/patients-view.component.html
+++ b/src/app/patients-view/patients-view.component.html
@@ -1,3 +1,4 @@
+<app-header [doctorName]="doctorName"></app-header>
 <section class="buttons flex justify-center items-center">
     <button mat-raised-button (click)="openAddDialog()">Add</button>
 
