--- a/src/app/add-patient-dialog/add-patient-dialog.component.html
+++ b/src/app/add-patient-dialog/add-patient-dialog.component.html
@@ -45,7 +45,7 @@
             <tr>
                 <td>
                     <mat-form-field class="example-form-field">
-                        <mat-label>Initial Checkup Date</mat-label>
+                        <mat-label>Next Checkup Date</mat-label>
                         <input matInput [matDatepicker]="datepicker" [(ngModel)]="nextCheckupDate"
                             name="nextCheckupDate" required>
                         <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
@@ -62,6 +62,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="accent" class="dialog-button" (click)="onClick()">{{actionType}}</button>
+    <button mat-raised-button color="accent" class="dialog-button" (click)="onClick()" [disabled]="!checkAllInputs()">{{actionType}}</button>
     <button mat-raised-button color="accent" class="dialog-button" (click)="cancel()">Cancel</button>
 </mat-dialog-actions>
