--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,12 @@
-<h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span
-        class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Welcome To Doctor
-        Buddy!</span></h1>
+<p>
+    <mat-toolbar>
+        <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
+            <span
+                class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Welcome To Doctor Buddy!
+            </span>
+        </h1>
+    </mat-toolbar>
+</p>
 <div div class="h-screen flex items-center justify-center">
     <mat-card class="example-card">
         <mat-card-header>
