implemented jwt auth

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -18,7 +18,7 @@
                     <tr>
                         <td>
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Username" [(ngModel)]="userName" name="username" required>
+                                <input matInput placeholder="Username" [(ngModel)]="email" name="email" required>
                             </mat-form-field>
                         </td>
                     </tr>
