--- a/src/app/patients-view/patients-view.component.html
+++ b/src/app/patients-view/patients-view.component.html
@@ -8,6 +8,24 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="patientsList" class="mat-elevation-z8">
 
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                    [checked]="selection.hasValue() && !isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox 
+                (click)="$event.stopPropagation()"
+                (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
+
+                </mat-checkbox>
+            </td>
+        </ng-container>
+
         <!-- Name Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -38,6 +56,7 @@
             <td mat-cell *matCellDef="let patient">{{ patient.nextCheckupDate | date:'yyyy-MM-dd' }}</td>
         </ng-container>
 
+
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let patient">
@@ -49,5 +68,12 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
     </table>
+    <mat-paginator #paginator class="paginator" [length]="totalItems" (page)="handlePageEvent($event)"
+        [pageSize]="pageSize" [pageSizeOptions]="[5,10,20]" [pageIndex]="pageIndex">
+    </mat-paginator>
+
+
 </div>
