--- a/src/app/sign-up-dialog/sign-up-dialog.component.html
+++ b/src/app/sign-up-dialog/sign-up-dialog.component.html
@@ -5,7 +5,7 @@
             <tr>
                 <td>
                     <mat-form-field class="signup-full-width">
-                        <input matInput placeholder="Username" [(ngModel)]="userName" name="username" required>
+                        <input matInput placeholder="Username" [(ngModel)]="email" name="email" required>
                     </mat-form-field>
                 </td>
             </tr>
