--- a/src/app/patients-view/patients-view.component.html
+++ b/src/app/patients-view/patients-view.component.html
@@ -65,8 +65,14 @@
                 <button mat-icon-button color="primary" (click)="openEditDialog(patient.id)">
                     <mat-icon>edit</mat-icon>
                 </button>
-            </td>
+                <button mat-icon-button color="primary" 
+                matTooltip="Sends Prescription for the medicines via email"
+                (click)="openPrescriptionDialog(patient.id)">
+                    <mat-icon>mail</mat-icon>
+                </button>
+            </td>       
         </ng-container>
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -74,7 +80,7 @@
 
     </table>
     <mat-paginator #paginator class="paginator" [length]="totalItems" (page)="handlePageEvent($event)"
-        [pageSize]="pageSize" [pageSizeOptions]="[5,10,20]" [pageIndex]="pageIndex">
+        [pageSize]="pageSize" [pageSizeOptions]="[5,10,20]" [(ngModel)]="pageIndex">
     </mat-paginator>
 
 
